--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -9,3 +9,11 @@ DIALOG:
   EMPTY_CONTENT: "{0}&r &6{1} &c没有内容或标准错误"
   EXIST_DIALOG_ID: "{0}&r &6{1} &8已有相同已注册的对话ID"
   NO_EXIST_DIALOG_ID: "{0}&r &6{1} &c不存在该对话ID"
+COMMAND:
+  BASE:
+    PLAYER: "玩家"
+    QUESTID: "任务ID"
+    MAIN_QUESTID: "主线任务ID"
+    SUB_QUESTID: "支线任务ID"
+  QUEST:
+    ACCEPT: "接受任务"
