v1.Alpha1-undone time-2021/7/20-1 - 任务模块 do... - 协同模式 do... - 数据模块 do... - 任务模块 do...

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -12,8 +12,11 @@ DIALOG:
 COMMAND:
   BASE:
     PLAYER: "玩家"
+    ARGUMENT: "参数"
+  QUEST:
     QUESTID: "任务ID"
     MAIN_QUESTID: "主线任务ID"
     SUB_QUESTID: "支线任务ID"
-  QUEST:
     ACCEPT: "接受任务"
+  TEAM:
+    NAME: "队伍名称"
