v1.Alpha1-undone time-2021/7/23-1 - 队伍模块 - 命令系统

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -17,6 +17,18 @@ COMMAND:
     QUESTID: "任务ID"
     MAIN_QUESTID: "主线任务ID"
     SUB_QUESTID: "支线任务ID"
-    ACCEPT: "接受任务"
+    HANDLE: "任务相关命令"
   TEAM:
     NAME: "队伍名称"
+    OPEN: "打开队伍界面"
+    CREATE: "创建队伍"
+    JOIN: "申请加入队伍"
+    LEAVE: "离开队伍"
+    MEMBERS: "查看成员列表"
+    ASKS: "查看申请入队列表"
+    ASKS_AGREE: "批准对方入队"
+    ASKS_REJECT: "拒绝对方入队"
+    DELETE: "解散队伍"
+    INVITE: "邀请玩家加入队伍"
+    KICK: "移除成员"
+  RELOAD: "重载配置"
