--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -15,6 +15,7 @@ DIALOG:
 QUEST:
   ERROR_FILE: "&7&l[ &c&li &7&l]&c 任务配置不存在或缺少键值： &r{0}"
   ALREADY_ACCEPT: "&7&l[ &c&li &7&l]&c 已接受过任务，请完成任务"
+  NULL_QUEST_DATA: "&7&l[ &c&li &7&l]&c 不存在任务数据 &r{0}"
 
 PACKET:
   ERROR_FILE: "&7&l[ &c&li &7&l]&c 数据包配置不存在或缺少键值： &r{0}"
@@ -36,8 +37,8 @@ COMMAND:
     PLAYER: "玩家"
     ARGUMENT: "参数"
   QUEST:
-    QUESTID: "任务ID"
-    MAIN_QUESTID: "内部任务ID"
+    QUEST_ID: "任务ID"
+    INNER_QUEST_ID: "内部任务ID"
     HANDLE: "任务相关命令"
   TEAM:
     NAME: "队伍名称"
