v1.Alpha1-undone time-2021/8/5-6 - 修复数据库存储 - 更改任务目标时间状态

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -18,9 +18,10 @@ QUEST-TIME_DAY: "天"
 QUEST-STATE_DOING: "正在进行"
 QUEST-STATE_IDLE: "闲置中"
 QUEST-STATE_FINISH: "已完成"
-QUEST-FAILURE: "失败"
-QUEST-NOT_ACCEPT: "未接受"
+QUEST-STATE_FAILURE: "失败"
+QUEST-STATE_NOT_ACCEPT: "未接受"
 QUEST-ALWAYS: "不限时"
+QUEST-TIMEOUT: "&c已超时"
 QUEST-ERROR_FILE: "&7&l[ &c&li &7&l]&c 任务配置不存在或缺少键值： &r{0}"
 QUEST-ALREADY_ACCEPT: "&7&l[ &c&li &7&l]&c 已接受过任务，请完成任务"
 QUEST-NULL_QUEST_DATA: "&7&l[ &c&li &7&l]&c 不存在任务数据 &r{0}"
