--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -2,6 +2,7 @@ LOADER-INFO:
   - "&7&l[ &c&li &7&l]&r  ┝  &3正在加载插件  &f{0}"
   - "&7&l[ &c&li &7&l]&r  ┝  &3当前插件版本  &f{1}"
 LOADER-TIME_COST: "{0}&r 所有配置载入完成，耗时 &8{1}ms"
+LOADER-NOT_INSTALLED-PLIB: "{0}&c 启用外部数据包模式，但未安装插件： &rProtocolLib"
 
 
 DIALOG-ERROR-FILE: "&7&l[ &c&li &7&l]&c 对话配置不存在或缺少键值： &r{0}"
