--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -67,9 +67,21 @@ COMMAND-ITEM-SAVE: "&7&l[ &c&li &7&l]&f 保存了物品配置： &8{0}"
 
 EDITOR-HOME: "&3&l可视化模式 &7- &f主页"
 EDITOR-HOME-LIST: "&7任务列表："
-EDITOR-HOME-LIST-META: "&7&l[ &b&l= &7&l]"
+EDITOR-HOME-LIST-META: "&7&l[ &b= &7&l]"
 EDITOR-HOME-LIST-HOVER: "&b查看已注册的任务列表"
 EDITOR-HOME-ADD: "&7添加任务："
-EDITOR-HOME-ADD-META: "&7&l[ &a&l+ &7&l]"
+EDITOR-HOME-ADD-META: "&7&l[ &a+ &7&l]"
 EDITOR-HOME-ADD-HOVER: "&a点击添加任务"
 EDITOR-PLEASE-QUEST-ID: "第一行输入任务ID"
+EDITOR-LIST-QUEST: "&3&l可视化模式 &7- &f任务列表"
+EDITOR-LIST-QUEST-INFO: "&7{0} {1}"
+EDITOR-LIST-QUEST-EDIT: "&7编辑"
+EDITOR-LIST-QUEST-EDIT-META: "&7&l[ &6# &7&l]"
+EDITOR-LIST-QUEST-EDIT-HOVER: "&6点击编辑 &f{0} &6任务"
+EDITOR-LIST-QUEST-DEL: "&7删除"
+EDITOR-LIST-QUEST-DEL-META: "&7&l[ &c× &7&l]"
+EDITOR-LIST-QUEST-DEL-HOVER: "&c点击删除 &f{0} &c任务"
+EDITOR-PREVIOUS-PAGE: "&7&l[ &f上一页 &7&l]"
+EDITOR-PREVIOUS-PAGE-HOVER: "&f点击"
+EDITOR-NEXT-PAGE: "&7&l[ &f下一页 &7&l]"
+EDITOR-NEXT-PAGE-HOVER: "&f点击"
