--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -28,6 +28,7 @@ QUEST-TIMEOUT: "&c已超时"
 QUEST-ERROR_FILE: "&7&l[ &c&li &7&l]&c 任务配置不存在或缺少键值： &r{0}"
 QUEST-ALREADY_ACCEPT: "&7&l[ &c&li &7&l]&c 已接受过任务，请完成任务"
 QUEST-NULL_QUEST_DATA: "&7&l[ &c&li &7&l]&c 不存在任务数据 &r{0}"
+QUEST-ERROR-ID: "&7&l[ &c&li &7&l]&c 任务ID &f'&7{0}&f'&c为空或已存在"
 
 
 PACKET-NULL_PACKET_ID: "&7&l[ &c&li &7&l]&c 不存在数据包ID： &r{0}"
@@ -74,7 +75,7 @@ EDITOR-HOME-ADD-META: "&7&l[ &a+ &7&l]"
 EDITOR-HOME-ADD-HOVER: "&a点击添加任务"
 EDITOR-PLEASE-QUEST-ID: "第一行输入任务ID"
 EDITOR-LIST-QUEST: "&3&l可视化模式 &7- &f任务列表"
-EDITOR-LIST-QUEST-INFO: "&7{0} {1}"
+EDITOR-LIST-QUEST-INFO: "&f'&7{0}&f' '&7{1}&f'"
 EDITOR-LIST-QUEST-EDIT: "&7编辑"
 EDITOR-LIST-QUEST-EDIT-META: "&7&l[ &6# &7&l]"
 EDITOR-LIST-QUEST-EDIT-HOVER: "&6点击编辑 &f{0} &6任务"
