--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -65,14 +65,18 @@ TAGS-LIST-FORMAT: "&f     - &7{0}"
 COMMAND-SUCCESSFUL_RELOAD: "&7&l[ &c&li &7&l]&f 已重载 &3&lQuestEngine &f配置文件"
 COMMAND-ITEM-SAVE: "&7&l[ &c&li &7&l]&f 保存了物品配置： &8{0}"
 
-
 EDITOR-HOME: "&3&l可视化模式 &7- &f主页"
-EDITOR-HOME-LIST: "&7任务列表："
-EDITOR-HOME-LIST-META: "&7&l[ &b= &7&l]"
-EDITOR-HOME-LIST-HOVER: "&b查看已注册的任务列表"
-EDITOR-HOME-ADD: "&7添加任务："
-EDITOR-HOME-ADD-META: "&7&l[ &a+ &7&l]"
-EDITOR-HOME-ADD-HOVER: "&a点击添加任务"
+EDITOR-HOME-QUEST-BUTTON: "&7任务编辑器"
+EDITOR-HOME-QUEST-BUTTON-HOVER: "&f点击"
+EDITOR-HOME-DIALOG-BUTTON: "&7对话编辑器"
+EDITOR-HOME-DIALOG-BUTTON-HOVER: "&f点击"
+EDITOR-HOME-QUEST: "&3&l可视化模式 &7- &f任务"
+EDITOR-HOME-QUEST-LIST: "&7任务列表："
+EDITOR-HOME-QUEST-LIST-META: "&7&l[ &b= &7&l]"
+EDITOR-HOME-QUEST-LIST-HOVER: "&b查看已注册的任务列表"
+EDITOR-HOME-QUEST-ADD: "&7添加任务："
+EDITOR-HOME-QUEST-ADD-META: "&7&l[ &a+ &7&l]"
+EDITOR-HOME-QUEST-ADD-HOVER: "&a点击添加任务"
 EDITOR-PLEASE-QUEST-ID: "第一行输入任务ID"
 EDITOR-LIST-QUEST: "&3&l可视化模式 &7- &f任务列表"
 EDITOR-LIST-QUEST-INFO: "&f'&7{0}&f' '&7{1}&f'"
