--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -28,7 +28,9 @@ QUEST-TIMEOUT: "&c已超时"
 QUEST-ERROR_FILE: "&7&l[ &c&li &7&l]&c 任务配置不存在或缺少键值： &r{0}"
 QUEST-ALREADY_ACCEPT: "&7&l[ &c&li &7&l]&c 已接受过任务，请完成任务"
 QUEST-NULL_QUEST_DATA: "&7&l[ &c&li &7&l]&c 不存在任务数据 &r{0}"
-QUEST-ERROR-ID: "&7&l[ &c&li &7&l]&c 任务ID &f'&7{0}&f'&c为空或已存在"
+QUEST-ERROR-ID: "&7&l[ &c&li &7&l]&c 任务ID &f\"&7{0}&f\"&c为空或已存在"
+MODE-TYPE-PERSONAL: "单人模式"
+MODE-TYPE-COLLABORATION: "协同模式"
 
 
 PACKET-NULL_PACKET_ID: "&7&l[ &c&li &7&l]&c 不存在数据包ID： &r{0}"
@@ -65,21 +67,23 @@ TAGS-LIST-FORMAT: "&f     - &7{0}"
 COMMAND-SUCCESSFUL_RELOAD: "&7&l[ &c&li &7&l]&f 已重载 &3&lQuestEngine &f配置文件"
 COMMAND-ITEM-SAVE: "&7&l[ &c&li &7&l]&f 保存了物品配置： &8{0}"
 
+
+
 EDITOR-HOME: "&3&l可视化模式 &7- &f主页"
 EDITOR-HOME-QUEST-BUTTON: "&7任务编辑器"
 EDITOR-HOME-QUEST-BUTTON-HOVER: "&f点击"
 EDITOR-HOME-DIALOG-BUTTON: "&7对话编辑器"
 EDITOR-HOME-DIALOG-BUTTON-HOVER: "&f点击"
 EDITOR-HOME-QUEST: "&3&l可视化模式 &7- &f任务"
-EDITOR-HOME-QUEST-LIST: "&7任务列表："
+EDITOR-HOME-QUEST-LIST: "&7任务列表"
 EDITOR-HOME-QUEST-LIST-META: "&7&l[ &b= &7&l]"
 EDITOR-HOME-QUEST-LIST-HOVER: "&b查看已注册的任务列表"
-EDITOR-HOME-QUEST-ADD: "&7添加任务："
+EDITOR-HOME-QUEST-ADD: "&7添加任务"
 EDITOR-HOME-QUEST-ADD-META: "&7&l[ &a+ &7&l]"
 EDITOR-HOME-QUEST-ADD-HOVER: "&a点击添加任务"
 EDITOR-PLEASE-QUEST-ID: "第一行输入任务ID"
 EDITOR-LIST-QUEST: "&3&l可视化模式 &7- &f任务列表"
-EDITOR-LIST-QUEST-INFO: "&f'&7{0}&f' '&7{1}&f'"
+EDITOR-LIST-QUEST-INFO: "&f\"&7{0}&f\" \"&7{1}&f\""
 EDITOR-LIST-QUEST-EDIT: "&7编辑"
 EDITOR-LIST-QUEST-EDIT-META: "&7&l[ &6# &7&l]"
 EDITOR-LIST-QUEST-EDIT-HOVER: "&6点击编辑 &f{0} &6任务"
@@ -90,3 +94,13 @@ EDITOR-PREVIOUS-PAGE: "&7&l[ &f上一页 &7&l]"
 EDITOR-PREVIOUS-PAGE-HOVER: "&f点击"
 EDITOR-NEXT-PAGE: "&7&l[ &f下一页 &7&l]"
 EDITOR-NEXT-PAGE-HOVER: "&f点击"
+EDITOR-EDIT-QUEST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\""
+EDITOR-EDIT-QUEST-META: "&7&l[ &6✎&7&l ]"
+EDITOR-EDIT-QUEST-META-HOVER: "&6点击编辑"
+EDITOR-EDIT-QUEST-NAME: "&7任务名称 &f\"&7{0}&f\""
+EDITOR-EDIT-QUEST-START: "&7内部任务起点 &f\"&7{1}&f\""
+EDITOR-EDIT-QUEST-SORT: "&7任务手册分类 &f\"&7{2}&f\""
+EDITOR-EDIT-QUEST-MODETYPE: "&7任务成员模式 &f\"&7{3}&f\""
+EDITOR-EDIT-QUEST-MODEAMOUNT: "&7协同成员数 &f\"&7{4}&f\""
+EDITOR-EDIT-QUEST-SHAREDATA: "&7协同共享任务数据 &f\"&7{5}&f\""
+EDITOR-EDIT-QUEST-NAME-INPUT: "第一行输入任务名称"
