--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -31,6 +31,8 @@ QUEST-NULL_QUEST_DATA: "&7&l[ &c&li &7&l]&c 不存在任务数据 &r{0}"
 QUEST-ERROR-ID: "&7&l[ &c&li &7&l]&c 任务ID &f\"&7{0}&f\"&c为空或已存在"
 MODE-TYPE-PERSONAL: "单人模式"
 MODE-TYPE-COLLABORATION: "协同模式"
+QUEST-ACCEPT-WAY-AUTO: "自动接受"
+QUEST-ACCEPT-WAY-COMMON: "主动接受"
 
 
 PACKET-NULL_PACKET_ID: "&7&l[ &c&li &7&l]&c 不存在数据包ID： &r{0}"
@@ -95,12 +97,21 @@ EDITOR-PREVIOUS-PAGE-HOVER: "&f点击"
 EDITOR-NEXT-PAGE: "&7&l[ &f下一页 &7&l]"
 EDITOR-NEXT-PAGE-HOVER: "&f点击"
 EDITOR-EDIT-QUEST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\""
-EDITOR-EDIT-QUEST-META: "&7&l[ &6✎&7&l ]"
-EDITOR-EDIT-QUEST-META-HOVER: "&6点击编辑"
-EDITOR-EDIT-QUEST-NAME: "&7任务名称 &f\"&7{0}&f\""
-EDITOR-EDIT-QUEST-START: "&7内部任务起点 &f\"&7{1}&f\""
-EDITOR-EDIT-QUEST-SORT: "&7任务手册分类 &f\"&7{2}&f\""
-EDITOR-EDIT-QUEST-MODETYPE: "&7任务成员模式 &f\"&7{3}&f\""
-EDITOR-EDIT-QUEST-MODEAMOUNT: "&7协同成员数 &f\"&7{4}&f\""
-EDITOR-EDIT-QUEST-SHAREDATA: "&7协同共享任务数据 &f\"&7{5}&f\""
+EDITOR-EDIT-QUEST-META: "&7&l[ &c✎&7&l ]"
+EDITOR-EDIT-QUEST-META-HOVER: "&c点击编辑"
+EDITOR-EDIT-QUEST-NAME: "&7任务名称  &f\"&6{0}&f\""
+EDITOR-EDIT-QUEST-START: "&7内部任务起点  &f\"&6{1}&f\""
+EDITOR-EDIT-QUEST-SORT: "&7任务手册分类  &f\"&6{2}&f\""
+EDITOR-EDIT-QUEST-MODETYPE: "&7任务成员模式  &f\"&6{3}&f\""
+EDITOR-EDIT-QUEST-MODEAMOUNT: "&7协同成员数  &f\"&6{4}&f\""
+EDITOR-EDIT-QUEST-SHAREDATA: "&7协同共享任务数据  &f\"&6{5}&f\""
+EDITOR-EDIT-QUEST-ACCEPTWAY: "&7接受任务方式  &f\"&6{6}&f\""
+EDITOR-EDIT-QUEST-MAXQUANTITY: "&7接受任务上限  &f\"&6{7}&f\""
+EDITOR-EDIT-QUEST-ACCEPTCONDITION: "&7接受任务条件设置"
+EDITOR-EDIT-QUEST-FAILURECONDITION: "&7任务失败条件设置"
+EDITOR-EDIT-QUEST-FAILURESCRIPT: "&7任务失败脚本设置"
+EDITOR-EDIT-QUEST-NOTE: "&7任务手册笔记设置"
+OPEN-ON: "开启"
+OPEN-OFF: "关闭"
 EDITOR-EDIT-QUEST-NAME-INPUT: "第一行输入任务名称"
+NUMBER-INPUT: "第一行输入数字"
