--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -116,4 +116,8 @@ OPEN-OFF: "关闭"
 EDITOR-EDIT-QUEST-NAME-INPUT: "第一行输入任务名称"
 NUMBER-INPUT: "第一行输入数字"
 EDITOR-EDIT-QUEST-INNER-START: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 选择内部任务作为起点"
-EDITOR-EDIT-QUEST-INNER-LIST: "&f\"&7{0}&f\" \"&7{1}&f\""
+EDITOR-EDIT-INNER-LIST: "&f\"&7{0}&f\" \"&7{1}&f\""
+EDITOR-EDIT-QUEST-START-STATE: "&7选择"
+EDITOR-EDIT-QUEST-START-STATE-META_1: "&7&l[ &7✘&7&l ]"
+EDITOR-EDIT-QUEST-START-STATE-META_2: "&7&l[ &e✔&7&l ]"
+EDITOR-EDIT-QUEST-START-STATE-HOVER: "&a点击设为起点"
