--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -118,6 +118,15 @@ NUMBER-INPUT: "第一行输入数字"
 EDITOR-EDIT-QUEST-INNER-START: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 选择内部任务作为起点"
 EDITOR-EDIT-INNER-LIST: "&f\"&7{0}&f\" \"&7{1}&f\""
 EDITOR-EDIT-QUEST-START-STATE: "&7选择"
-EDITOR-EDIT-QUEST-START-STATE-META_1: "&7&l[ &7✘&7&l ]"
-EDITOR-EDIT-QUEST-START-STATE-META_2: "&7&l[ &e✔&7&l ]"
+EDITOR-EDIT-QUEST-START-STATE-META_1: "&7&l[ &7✘ &7&l]"
+EDITOR-EDIT-QUEST-START-STATE-META_2: "&7&l[ &e✔ &7&l]"
 EDITOR-EDIT-QUEST-START-STATE-HOVER: "&a点击设为起点"
+EDITOR-PLEASE-SORT: "第一行输入分类"
+EDITOR-ACCEPT-CONDITION-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 接受任务条件"
+EDITOR-CONDITION-LIST: "&f\"&7{0}&f\"&f\""
+EDITOR-CONDITION-RETURN: "&7返回"
+EDITOR-CONDITION-RETURN-TRUE: "&7&l[ &atrue &7&l]"
+EDITOR-CONDITION-RETURN-FALSE: "&7&l[ &afalse &7&l]"
+EDITOR-CONDITION-DEL: "删除"
+EDITOR-CONDITION-META: "&7&l[ &c× &7&l]"
+EDITOR-CONDITION-HOVER: "&c点击删除条件"
