--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -90,7 +90,7 @@ EDITOR-LIST-QUEST-EDIT: "&7编辑"
 EDITOR-LIST-QUEST-EDIT-META: "&7&l[ &6# &7&l]"
 EDITOR-LIST-QUEST-EDIT-HOVER: "&6点击编辑 &f{0} &6任务"
 EDITOR-LIST-QUEST-DEL: "&7删除"
-EDITOR-LIST-QUEST-DEL-META: "&7&l[ &c× &7&l]"
+EDITOR-LIST-QUEST-DEL-META: "&7&l[ &c✘ &7&l]"
 EDITOR-LIST-QUEST-DEL-HOVER: "&c点击删除 &f{0} &c任务"
 EDITOR-PREVIOUS-PAGE: "&7&l[ &f上一页 &7&l]"
 EDITOR-PREVIOUS-PAGE-HOVER: "&f点击"
@@ -123,10 +123,15 @@ EDITOR-EDIT-QUEST-START-STATE-META_2: "&7&l[ &e✔ &7&l]"
 EDITOR-EDIT-QUEST-START-STATE-HOVER: "&a点击设为起点"
 EDITOR-PLEASE-SORT: "第一行输入分类"
 EDITOR-ACCEPT-CONDITION-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 接受任务条件"
+EDITOR-FAIL-CONDITION-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 全局任务失败条件"
+EDITOR-FAIL-SCRIPT-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 全局任务失败后脚本"
 EDITOR-CONDITION-LIST: "&f\"&7{0}&f\"&f\""
 EDITOR-CONDITION-RETURN: "&7返回"
 EDITOR-CONDITION-RETURN-TRUE: "&7&l[ &atrue &7&l]"
-EDITOR-CONDITION-RETURN-FALSE: "&7&l[ &afalse &7&l]"
-EDITOR-CONDITION-DEL: "删除"
-EDITOR-CONDITION-META: "&7&l[ &c× &7&l]"
-EDITOR-CONDITION-HOVER: "&c点击删除条件"
+EDITOR-CONDITION-RETURN-FALSE: "&7&l[ &cfalse &7&l]"
+EDITOR-SCRIPT-RETURN: "&7状态"
+EDITOR-SCRIPT-RETURN-TRUE: "&7&l[ &a有效 &7&l]"
+EDITOR-SCRIPT-RETURN-FALSE: "&7&l[ &c无效 &7&l]"
+EDITOR-LIST-DEL: "删除"
+EDITOR-LIST-META: "&7&l[ &c✘ &7&l]"
+EDITOR-LIST-HOVER: "&c点击删除条件"
