--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -132,6 +132,6 @@ EDITOR-CONDITION-RETURN-FALSE: "&7&l[ &cfalse &7&l]"
 EDITOR-SCRIPT-RETURN: "&7状态"
 EDITOR-SCRIPT-RETURN-TRUE: "&7&l[ &a有效 &7&l]"
 EDITOR-SCRIPT-RETURN-FALSE: "&7&l[ &c无效 &7&l]"
-EDITOR-LIST-DEL: "删除"
+EDITOR-LIST-DEL: "&7删除"
 EDITOR-LIST-META: "&7&l[ &c✘ &7&l]"
 EDITOR-LIST-HOVER: "&c点击删除条件"
