--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -129,9 +129,10 @@ EDITOR-CONDITION-LIST: "&f\"&7{0}&f\"&f\""
 EDITOR-CONDITION-RETURN: "&7返回"
 EDITOR-CONDITION-RETURN-TRUE: "&7&l[ &atrue &7&l]"
 EDITOR-CONDITION-RETURN-FALSE: "&7&l[ &cfalse &7&l]"
+EDITOR-CONDITION-RETURN-ERROR: "&7&l[ &cerror &7&l]"
 EDITOR-SCRIPT-RETURN: "&7状态"
 EDITOR-SCRIPT-RETURN-TRUE: "&7&l[ &a有效 &7&l]"
-EDITOR-SCRIPT-RETURN-FALSE: "&7&l[ &c无效 &7&l]"
+EDITOR-SCRIPT-RETURN-ERROR: "&7&l[ &c无效 &7&l]"
 EDITOR-LIST-DEL: "&7删除"
 EDITOR-LIST-META: "&7&l[ &c✘ &7&l]"
 EDITOR-LIST-HOVER: "&c点击删除条件"
