--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -125,7 +125,7 @@ EDITOR-PLEASE-SORT: "第一行输入分类"
 EDITOR-ACCEPT-CONDITION-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 接受任务条件"
 EDITOR-FAIL-CONDITION-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 全局任务失败条件"
 EDITOR-FAIL-SCRIPT-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 全局任务失败后脚本"
-EDITOR-CONDITION-LIST: "&f\"&7{0}&f\"&f\""
+EDITOR-CONDITION-LIST: "&f\"&7{0}&f\""
 EDITOR-CONDITION-RETURN: "&7返回"
 EDITOR-CONDITION-RETURN-TRUE: "&7&l[ &atrue &7&l]"
 EDITOR-CONDITION-RETURN-FALSE: "&7&l[ &cfalse &7&l]"
@@ -136,3 +136,4 @@ EDITOR-SCRIPT-RETURN-ERROR: "&7&l[ &c无效 &7&l]"
 EDITOR-LIST-DEL: "&7删除"
 EDITOR-LIST-META: "&7&l[ &c✘ &7&l]"
 EDITOR-LIST-HOVER: "&c点击删除条件"
+EDITOR-SCRIPT-LIST: "&f\"&7{0}&f\""
