--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -101,6 +101,7 @@ EDITOR-EDIT-QUEST-META: "&7&l[ &c✎&7&l ]"
 EDITOR-EDIT-QUEST-META-HOVER: "&c点击编辑"
 EDITOR-EDIT-QUEST-NAME: "&7任务名称  &f\"&6{0}&f\""
 EDITOR-EDIT-QUEST-START: "&7内部任务起点  &f\"&6{1}&f\""
+EDITOR-EDIT-QUEST-INNER: "&7内部任务列表 "
 EDITOR-EDIT-QUEST-SORT: "&7任务手册分类  &f\"&6{2}&f\""
 EDITOR-EDIT-QUEST-MODETYPE: "&7任务成员模式  &f\"&6{3}&f\""
 EDITOR-EDIT-QUEST-MODEAMOUNT: "&7协同成员数  &f\"&6{4}&f\""
@@ -137,3 +138,11 @@ EDITOR-LIST-DEL: "&7删除"
 EDITOR-LIST-META: "&7&l[ &c✘ &7&l]"
 EDITOR-LIST-HOVER: "&c点击删除条件"
 EDITOR-SCRIPT-LIST: "&f\"&7{0}&f\""
+EDITOR-LIST-INNER: "&3&l可视化模式 &7- &f\"&7{0}&f\" &f内部任务列表"
+EDITOR-LIST-INNER-INFO: "&f\"&7{0}&f\" \"&7{1}&f\""
+EDITOR-LIST-INNER-EDIT: "&7编辑"
+EDITOR-LIST-INNER-EDIT-META: "&7&l[ &6# &7&l]"
+EDITOR-LIST-INNER-EDIT-HOVER: "&6点击编辑 &f{2} &6内部任务"
+EDITOR-LIST-INNER-DEL: "&7删除"
+EDITOR-LIST-INNER-DEL-META: "&7&l[ &c✘ &7&l]"
+EDITOR-LIST-INNER-DEL-HOVER: "&c点击删除 &f{2} &c内部任务"
