--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -146,3 +146,11 @@ EDITOR-LIST-INNER-EDIT-HOVER: "&6点击编辑 &f{2} &6内部任务"
 EDITOR-LIST-INNER-DEL: "&7删除"
 EDITOR-LIST-INNER-DEL-META: "&7&l[ &c✘ &7&l]"
 EDITOR-LIST-INNER-DEL-HOVER: "&c点击删除 &f{2} &c内部任务"
+EDITOR-EDIT-INNER: "&3&l可视化模式 &7- &f编辑内部任务 \"&7{1}&f(&7{0}&f)\""
+EDITOR-EDIT-INNER-META: "&7&l[ &c✎&7&l ]"
+EDITOR-EDIT-INNER-META-HOVER: "&c点击编辑"
+EDITOR-EDIT-INNER-NAME: "&7内部任务名称  &f\"&6{0}&f\""
+EDITOR-EDIT-INNER-NEXTINNER: "&7下一个内部任务ID  &f\"&6{1}&f\""
+EDITOR-EDIT-INNER-DESC: "&7内部任务笔记设置"
+EDITOR-EDIT-INNER-TARGET: "&7任务目标设置"
+EDITOR-EDIT-INNER-REWARD: "&7任务奖励设置"
