--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -154,3 +154,4 @@ EDITOR-EDIT-INNER-NEXTINNER: "&7下一个内部任务ID  &f\"&6{1}&f\""
 EDITOR-EDIT-INNER-DESC: "&7内部任务笔记设置"
 EDITOR-EDIT-INNER-TARGET: "&7任务目标设置"
 EDITOR-EDIT-INNER-REWARD: "&7任务奖励设置"
+EDITOR-EDIT-INNER-NAME-INPUT: "第一行输入内部任务名称"
