--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -155,3 +155,22 @@ EDITOR-EDIT-INNER-DESC: "&7内部任务笔记设置"
 EDITOR-EDIT-INNER-TARGET: "&7任务目标设置"
 EDITOR-EDIT-INNER-REWARD: "&7任务奖励设置"
 EDITOR-EDIT-INNER-NAME-INPUT: "第一行输入内部任务名称"
+EDITOR-EDIT-INNER-NEXT: "&3&l可视化模式 &7- &f选择下一个内部任务 \"&7{1}&f(&7{0}&f)\""
+EDITOR-EDIT-INNER-NEXT-CHOOSE: "&7选择"
+EDITOR-EDIT-INNER-NEXT-META_1: "&7&l[ &7✘ &7&l]"
+EDITOR-EDIT-INNER-NEXT-META_2: "&7&l[ &e✔ &7&l]"
+EDITOR-EDIT-INNER-NEXT-HOVER: "&a点击设为下一个内部任务"
+EDITOR-EDIT-INNER-NOTE: "&3&l可视化模式 &7- &f内部任务笔记 \"&7{1}&f(&7{0}&f)\""
+EDITOR-LIST-INNER-NOTE-LIST: "&f\"&7{0}&f\""
+EDITOR-LIST-INNER-NOTE-DEL: "&7删除"
+EDITOR-LIST-INNER-NOTE-DEL-META: "&7&l[ &c✘ &7&l]"
+EDITOR-LIST-INNER-NOTE-DEL-HOVER: "&c点击删除该描述"
+EDITOR-LIST-INNER-NOTE-EDIT: "&7编辑"
+EDITOR-LIST-INNER-NOTE-EDIT-META: "&7&l[ &c✎ &7&l]"
+EDITOR-LIST-INNER-NOTE-EDIT-HOVER: "&c点击编辑该描述"
+EDITOR-LIST-INNER-NOTE-ADD: "&7添加"
+EDITOR-LIST-INNER-NOTE-ADD-META: "&7&l[ &e✎ &7&l]"
+EDITOR-LIST-INNER-NOTE-ADD-HOVER: "&e在该描述下一行添加描述"
+EDITOR-LIST-INNER-DESC-ADD: "&7添加描述"
+EDITOR-LIST-INNER-DESC-ADD-META: "&7&l[ &a✎ &7&l]"
+EDITOR-LIST-INNER-DESC-ADD-HOVER: "&a点击添加描述到首行"
