--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -174,3 +174,9 @@ EDITOR-LIST-INNER-NOTE-ADD-HOVER: "&e在该描述下一行添加描述"
 EDITOR-LIST-INNER-DESC-ADD: "&7添加描述"
 EDITOR-LIST-INNER-DESC-ADD-META: "&7&l[ &a✎ &7&l]"
 EDITOR-LIST-INNER-DESC-ADD-HOVER: "&a点击添加描述到首行"
+EDITOR-TARGET: "&3&l可视化模式 &7- &f内部任务目标列表 \"&7{1}&f(&7{0}&f)\""
+EDITOR-TARGET-LIST: "&f{0}  \"&7{1}&f\""
+EDITOR-TARGET-EDIT: "&7编辑"
+EDITOR-TARGET-EDIT-META: "&7&l[ &c✎ &7&l]"
+EDITOR-TARGET-EDIT-HOVER: "&c点击编辑"
+
