--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -136,7 +136,7 @@ EDITOR-SCRIPT-RETURN-TRUE: "&7&l[ &a有效 &7&l]"
 EDITOR-SCRIPT-RETURN-ERROR: "&7&l[ &c无效 &7&l]"
 EDITOR-LIST-DEL: "&7删除"
 EDITOR-LIST-META: "&7&l[ &c✘ &7&l]"
-EDITOR-LIST-HOVER: "&c点击删除条件"
+EDITOR-LIST-HOVER: "&c点击删除"
 EDITOR-SCRIPT-LIST: "&f\"&7{0}&f\""
 EDITOR-LIST-INNER: "&3&l可视化模式 &7- &f\"&7{0}&f\" &f内部任务列表"
 EDITOR-LIST-INNER-INFO: "&f\"&7{0}&f\" \"&7{1}&f\""
@@ -153,7 +153,8 @@ EDITOR-EDIT-INNER-NAME: "&7内部任务名称  &f\"&6{0}&f\""
 EDITOR-EDIT-INNER-NEXTINNER: "&7下一个内部任务ID  &f\"&6{1}&f\""
 EDITOR-EDIT-INNER-DESC: "&7内部任务笔记设置"
 EDITOR-EDIT-INNER-TARGET: "&7任务目标设置"
-EDITOR-EDIT-INNER-REWARD: "&7任务奖励设置"
+EDITOR-EDIT-INNER-REWARDFINISH: "&7任务完成奖励设置"
+EDITOR-EDIT-INNER-REWARDFAIL: "&7任务失败奖励设置"
 EDITOR-EDIT-INNER-NAME-INPUT: "第一行输入内部任务名称"
 EDITOR-EDIT-INNER-NEXT: "&3&l可视化模式 &7- &f选择下一个内部任务 \"&7{1}&f(&7{0}&f)\""
 EDITOR-EDIT-INNER-NEXT-CHOOSE: "&7选择"
@@ -179,4 +180,17 @@ EDITOR-TARGET-LIST: "&f{0}  \"&7{1}&f\""
 EDITOR-TARGET-EDIT: "&7编辑"
 EDITOR-TARGET-EDIT-META: "&7&l[ &c✎ &7&l]"
 EDITOR-TARGET-EDIT-HOVER: "&c点击编辑"
+EDITOR-EDIT-TARGET: "&3&l可视化模式 &7- &f任务目标 \"&7{1}&f(&7{0}&f)&7 {2}&f\""
+EDITOR-EDIT-TARGET-VALUE: "&f{0}: &7{1}"
+EDITOR-EDIT-TARGET-KEY: "&f{0}:"
+EDITOR-EDIT-TARGET-VALUE-LIST: "&f\"&7{0}&f\""
+EDITOR-FINISH_REWARD: "&3&l可视化模式 &7- &f完成奖励列表 \"&7{1}&f(&7{0}&f)\""
+EDITOR-FINISH_REWARD-LIST: "&f\"&7{0}&f\""
+EDITOR-EDIT-FINISH_REWARD-EDIT: "&7编辑"
+EDITOR-EDIT-FINISH_REWARD-EDIT-META: "&7&l[ &c✎ &7&l]"
+EDITOR-EDIT-FINISH_REWARD-EDIT-HOVER: "&c点击编辑"
+EDITOR-EDIT-FINISH_REWARD: "&3&l可视化模式 &7- &f完成奖励 \"&7{1}&f(&7{0}&f)&7 {2}&f\""
+EDITOR-EDIT-FINISH_REWARD-LIST: "&f\"&7{0}&f\""
+EDITOR-EDIT-FAIL_REWARD: "&3&l可视化模式 &7- &f完成奖励 \"&7{1}&f(&7{0}&f)&f\""
+EDITOR-EDIT-FAIL_REWARD-LIST: "&f\"&7{0}&f\""
 
