--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -153,8 +153,8 @@ EDITOR-EDIT-INNER-NAME: "&7内部任务名称  &f\"&6{0}&f\""
 EDITOR-EDIT-INNER-NEXTINNER: "&7下一个内部任务ID  &f\"&6{1}&f\""
 EDITOR-EDIT-INNER-DESC: "&7内部任务笔记设置"
 EDITOR-EDIT-INNER-TARGET: "&7任务目标设置"
-EDITOR-EDIT-INNER-REWARDFINISH: "&7任务完成奖励设置"
-EDITOR-EDIT-INNER-REWARDFAIL: "&7任务失败奖励设置"
+EDITOR-EDIT-INNER-REWARD: "&7任务完成奖励设置"
+EDITOR-EDIT-INNER-FAIL: "&7任务失败奖励设置"
 EDITOR-EDIT-INNER-NAME-INPUT: "第一行输入内部任务名称"
 EDITOR-EDIT-INNER-NEXT: "&3&l可视化模式 &7- &f选择下一个内部任务 \"&7{1}&f(&7{0}&f)\""
 EDITOR-EDIT-INNER-NEXT-CHOOSE: "&7选择"
@@ -191,6 +191,6 @@ EDITOR-EDIT-FINISH_REWARD-EDIT-META: "&7&l[ &c✎ &7&l]"
 EDITOR-EDIT-FINISH_REWARD-EDIT-HOVER: "&c点击编辑"
 EDITOR-EDIT-FINISH_REWARD: "&3&l可视化模式 &7- &f完成奖励 \"&7{1}&f(&7{0}&f)&7 {2}&f\""
 EDITOR-EDIT-FINISH_REWARD-LIST: "&f\"&7{0}&f\""
-EDITOR-EDIT-FAIL_REWARD: "&3&l可视化模式 &7- &f完成奖励 \"&7{1}&f(&7{0}&f)&f\""
+EDITOR-EDIT-FAIL_REWARD: "&3&l可视化模式 &7- &f内部任务失败奖励 \"&7{1}&f(&7{0}&f)&f\""
 EDITOR-EDIT-FAIL_REWARD-LIST: "&f\"&7{0}&f\""
 
