--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -11,6 +11,7 @@ DIALOG-NO_FILES: "{0}&r &6dialog &8文件夹&c不存在，&8开始创建 &6dialo
 DIALOG-EMPTY_CONTENT: "{0}&r &6{1} &c没有内容或标准错误"
 DIALOG-EXIST_DIALOG_ID: "{0}&r &6{1} &8已有相同已注册的对话ID"
 DIALOG-NO_EXIST_DIALOG_ID: "{0}&r &6{1} &c不存在该对话ID"
+DIALOG-CHAT-HELP: "&c&l使用滚轮选择  按 &f&lF&c&l 键确定"
 
 
 QUEST-NO_FILES: "{0}&r &6quest &8文件夹&c不存在，&8开始创建 &6quest &8文件夹"
