--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -84,7 +84,7 @@ EDITOR-HOME-QUEST-LIST-HOVER: "&b查看已注册的任务列表"
 EDITOR-HOME-QUEST-ADD: "&7添加任务"
 EDITOR-HOME-QUEST-ADD-META: "&7&l[ &a+ &7&l]"
 EDITOR-HOME-QUEST-ADD-HOVER: "&a点击添加任务"
-EDITOR-PLEASE-QUEST-ID: "第一行输入任务ID"
+EDITOR-PLEASE-QUEST-ID: "下一行输入任务ID"
 EDITOR-LIST-QUEST: "&3&l可视化模式 &7- &f任务列表"
 EDITOR-LIST-QUEST-INFO: "&f\"&7{0}&f\" \"&7{1}&f\""
 EDITOR-LIST-QUEST-EDIT: "&7编辑"
@@ -115,15 +115,15 @@ EDITOR-EDIT-QUEST-FAILURESCRIPT: "&7任务失败脚本设置"
 EDITOR-EDIT-QUEST-NOTE: "&7任务手册笔记设置"
 OPEN-ON: "开启"
 OPEN-OFF: "关闭"
-EDITOR-EDIT-QUEST-NAME-INPUT: "第一行输入任务名称"
-NUMBER-INPUT: "第一行输入数字"
+EDITOR-EDIT-QUEST-NAME-INPUT: "下一行输入任务名称"
+NUMBER-INPUT: "下一行输入数字"
 EDITOR-EDIT-QUEST-INNER-START: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 选择内部任务作为起点"
 EDITOR-EDIT-INNER-LIST: "&f\"&7{0}&f\" \"&7{1}&f\""
 EDITOR-EDIT-QUEST-START-STATE: "&7选择"
 EDITOR-EDIT-QUEST-START-STATE-META_1: "&7&l[ &7✘ &7&l]"
 EDITOR-EDIT-QUEST-START-STATE-META_2: "&7&l[ &e✔ &7&l]"
 EDITOR-EDIT-QUEST-START-STATE-HOVER: "&a点击设为起点"
-EDITOR-PLEASE-SORT: "第一行输入分类"
+EDITOR-PLEASE-SORT: "下一行输入分类"
 EDITOR-ACCEPT-CONDITION-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 接受任务条件"
 EDITOR-FAIL-CONDITION-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 全局任务失败条件"
 EDITOR-FAIL-SCRIPT-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 全局任务失败后脚本"
@@ -156,7 +156,7 @@ EDITOR-EDIT-INNER-DESC: "&7内部任务笔记设置"
 EDITOR-EDIT-INNER-TARGET: "&7任务目标设置"
 EDITOR-EDIT-INNER-REWARD: "&7任务完成奖励设置"
 EDITOR-EDIT-INNER-FAIL: "&7任务失败奖励设置"
-EDITOR-EDIT-INNER-NAME-INPUT: "第一行输入内部任务名称"
+EDITOR-EDIT-INNER-NAME-INPUT: "下一行输入内部任务名称"
 EDITOR-EDIT-INNER-NEXT: "&3&l可视化模式 &7- &f选择下一个内部任务 \"&7{1}&f(&7{0}&f)\""
 EDITOR-EDIT-INNER-NEXT-CHOOSE: "&7选择"
 EDITOR-EDIT-INNER-NEXT-META_1: "&7&l[ &7✘ &7&l]"
