2 - 1.5.0  2022/5/11 - 可视化编辑器新增返回按钮

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -30,6 +30,7 @@ QUEST-ERROR_FILE: "&7&l[ &c&li &7&l]&c 任务配置不存在或缺少键值： &
 QUEST-ALREADY_ACCEPT: "&7&l[ &c&li &7&l]&c 已接受过任务，请完成任务"
 QUEST-NULL_QUEST_DATA: "&7&l[ &c&li &7&l]&c 不存在任务数据 &r{0}"
 QUEST-ERROR-ID: "&7&l[ &c&li &7&l]&c 任务ID &f\"&7{0}&f\"&c为空或已存在"
+INNER-ERROR-ID: "&7&l[ &c&li &7&l]&c 内部任务ID &f\"&7{0}&f(&7{1}&f)\"&c为空或已存在"
 MODE-TYPE-PERSONAL: "单人模式"
 MODE-TYPE-COLLABORATION: "协同模式"
 QUEST-ACCEPT-WAY-AUTO: "自动接受"
@@ -142,7 +143,11 @@ EDITOR-SCRIPT-LIST: "&f\"&7{0}&f\""
 EDITOR-LIST-INNER: "&3&l可视化模式 &7- &f\"&7{0}&f\" &f内部任务列表"
 EDITOR-LIST-INNER-INFO: "&f\"&7{0}&f\" \"&7{1}&f\""
 EDITOR-LIST-INNER-EDIT: "&7编辑"
+EDITOR-LIST-INNER-ADD: "&7添加内部任务"
+EDITOR-LIST-INNER-ADD-META: "&7&l[ &a+ &7&l]"
+EDITOR-LIST-INNER-ADD-HOVER: "&a点击添加内部任务"
 EDITOR-LIST-INNER-EDIT-META: "&7&l[ &6# &7&l]"
+EDITOR-PLEASE-INNER-ID: "下一行输入内部任务ID"
 EDITOR-LIST-INNER-EDIT-HOVER: "&6点击编辑 &f{2} &6内部任务"
 EDITOR-LIST-INNER-DEL: "&7删除"
 EDITOR-LIST-INNER-DEL-META: "&7&l[ &c✘ &7&l]"
@@ -194,4 +199,8 @@ EDITOR-EDIT-FINISH_REWARD: "&3&l可视化模式 &7- &f完成奖励 \"&7{1}&f(&7{
 EDITOR-EDIT-FINISH_REWARD-LIST: "&f\"&7{0}&f\""
 EDITOR-EDIT-FAIL_REWARD: "&3&l可视化模式 &7- &f内部任务失败奖励 \"&7{1}&f(&7{0}&f)&f\""
 EDITOR-EDIT-FAIL_REWARD-LIST: "&f\"&7{0}&f\""
+
+EDITOR-BACK: "&7返回"
+EDITOR-BACK-META: "&7&l[ &f◀ &7&l]"
+EDITOR-BACK-HOVER: "&f点击返回"
 
