1 - 1.5.0  2022/5/13 - 任务目标失败不再自动设置任务失败，任务失败由用户通过语句控制

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -213,3 +213,14 @@ EDITOR-BACK: "&7返回"
 EDITOR-BACK-META: "&7&l[ &f◀ &7&l]"
 EDITOR-BACK-HOVER: "&f点击返回"
 
+TIME-FRAME-WEEK-1: "一"
+TIME-FRAME-WEEK-2: "二"
+TIME-FRAME-WEEK-3: "三"
+TIME-FRAME-WEEK-4: "四"
+TIME-FRAME-WEEK-5: "五"
+TIME-FRAME-WEEK-6: "六"
+TIME-FRAME-WEEK-7: "日"
+TIME-FRAME-WEEKLY: "&8每周&f{0} {1}到&f{2} {3}"
+TIME-FRAME-MONTHLY: "&8每月&f{0}&8日&f{1}到&f{2}&8日&f{3}"
+TIME-FRAME-YEARLY: "&8每年&f{0}&8月&f{1}&8日&f{2}到&f{3}&8月&f{4}&8日&f{5}"
+TIME-FRAME-DAY: "&8每天&f{0}到&f{1}"
