1 - 1.5.0  2022/5/21 - 时间框架编辑器

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -157,6 +157,7 @@ EDITOR-EDIT-INNER-META: "&7&l[ &c✎&7&l ]"
 EDITOR-EDIT-INNER-META-HOVER: "&c点击编辑"
 EDITOR-EDIT-INNER-NAME: "&7内部任务名称  &f\"&6{0}&f\""
 EDITOR-EDIT-INNER-NEXTINNER: "&7下一个内部任务ID  &f\"&6{1}&f\""
+EDITOR-EDIT-INNER-TIME: "&7时间框架  &f\"&6{2}&f\""
 EDITOR-EDIT-INNER-DESC: "&7内部任务笔记设置"
 EDITOR-EDIT-INNER-TARGET: "&7任务目标设置"
 EDITOR-EDIT-INNER-REWARD: "&7任务完成奖励设置"
@@ -223,3 +224,36 @@ TIME-FRAME-WEEKLY: "&8每周&f{0} {1}到&f{2} {3}"
 TIME-FRAME-MONTHLY: "&8每月&f{0}&8日&f{1}到&f{2}&8日&f{3}"
 TIME-FRAME-YEARLY: "&8每年&f{0}&8月&f{1}&8日&f{2}到&f{3}&8月&f{4}&8日&f{5}"
 TIME-FRAME-DAY: "&8每天&f{0}到&f{1}"
+
+EDITOR-EDIT-TIME: "&3&l可视化模式 &7- &f时间框架 \"&7{1}&f(&7{0}&f)\""
+EDITOR-EDIT-TIME-META: "&7&l[ &c✎&7&l ]"
+EDITOR-EDIT-TIME-META-HOVER: "&c点击编辑"
+EDITOR-EDIT-TIME-TYPE: "&7时间类型  &f\"&6{0}&f\""
+EDITOR-EDIT-TIME-TYPE-DAY: "DAY(每天一次)"
+EDITOR-EDIT-TIME-TYPE-WEEKLY: "DAY(每周一次)"
+EDITOR-EDIT-TIME-TYPE-MONTHLY: "DAY(每月一次)"
+EDITOR-EDIT-TIME-TYPE-YEARLY: "DAY(每年一次)"
+EDITOR-EDIT-TIME-TYPE-ALWAYS: "ALWAYS(无时限)"
+EDITOR-EDIT-TIME-TYPE-CUSTOM: "CUSTOM(时间段)"
+EDITOR-TIME-FROM: "起始时间"
+EDITOR-TIME-END: "结束时间"
+EDITOR-PLEASE-TIME:
+  - "{0}"
+  - "格式 00:00:00"
+  - "请在下一行输入"
+EDITOR-PLEASE-WEEK:
+  - "{0}"
+  - "星期几"
+  - "请在下一行输入"
+EDITOR-PLEASE-DAY:
+  - "{0}"
+  - "月份的几号"
+  - "请在下一行输入"
+EDITOR-PLEASE-MONTH:
+  - "{0}"
+  - "几月份"
+  - "请在下一行输入"
+EDITOR-PLEASE-TIME-CUSTOM:
+  - "{0}"
+  - "格式(s/m/h 数字) 如's 5'"
+  - "请在下一行输入"
