1 - 1.5.0  2022/5/21 - 时间框架编辑器

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -235,6 +235,9 @@ EDITOR-EDIT-TIME-TYPE-MONTHLY: "DAY(每月一次)"
 EDITOR-EDIT-TIME-TYPE-YEARLY: "DAY(每年一次)"
 EDITOR-EDIT-TIME-TYPE-ALWAYS: "ALWAYS(无时限)"
 EDITOR-EDIT-TIME-TYPE-CUSTOM: "CUSTOM(时间段)"
+EDITOR-EDIT-TIME-SELECT_1: "&7&l[ &7✘ &7&l]"
+EDITOR-EDIT-TIME-SELECT_2: "&7&l[ &e✔ &7&l]"
+EDITOR-EDIT-TIME-SELECT-HOVER: "&a点击设为该时间类型"
 EDITOR-TIME-FROM: "起始时间"
 EDITOR-TIME-END: "结束时间"
 EDITOR-PLEASE-TIME:
