2 - 1.5.0  2022/5/21 - 时间框架编辑器

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -220,15 +220,17 @@ TIME-FRAME-WEEK-4: "四"
 TIME-FRAME-WEEK-5: "五"
 TIME-FRAME-WEEK-6: "六"
 TIME-FRAME-WEEK-7: "日"
-TIME-FRAME-WEEKLY: "&8每周&f{0} {1}到&f{2} {3}"
-TIME-FRAME-MONTHLY: "&8每月&f{0}&8日&f{1}到&f{2}&8日&f{3}"
-TIME-FRAME-YEARLY: "&8每年&f{0}&8月&f{1}&8日&f{2}到&f{3}&8月&f{4}&8日&f{5}"
+TIME-FRAME-WEEKLY: "&8每周&f{0} {1}到&8每周&f{2} {3}"
+TIME-FRAME-MONTHLY: "&8每月&f{0}&8日&f{1}到&8每月&f{2}&8日&f{3}"
+TIME-FRAME-YEARLY: "&8每年&f{0}&8月&f{1}&8日&f{2}到&8每年&f{3}&8月&f{4}&8日&f{5}"
 TIME-FRAME-DAY: "&8每天&f{0}到&f{1}"
 
 EDITOR-EDIT-TIME: "&3&l可视化模式 &7- &f时间框架 \"&7{1}&f(&7{0}&f)\""
+EDITOR-EDIT-TIME-SELECT: "&3&l可视化模式 &7- &f时间框架 \"&7{1}&f(&7{0}&f)\" 选择时间类型"
 EDITOR-EDIT-TIME-META: "&7&l[ &c✎&7&l ]"
 EDITOR-EDIT-TIME-META-HOVER: "&c点击编辑"
 EDITOR-EDIT-TIME-TYPE: "&7时间类型  &f\"&6{0}&f\""
+EDITOR-EDIT-TIME-DUR: "&7时间段  &f\"&6{0}&f\""
 EDITOR-EDIT-TIME-TYPE-DAY: "DAY(每天一次)"
 EDITOR-EDIT-TIME-TYPE-WEEKLY: "DAY(每周一次)"
 EDITOR-EDIT-TIME-TYPE-MONTHLY: "DAY(每月一次)"
@@ -257,6 +259,5 @@ EDITOR-PLEASE-MONTH:
   - "几月份"
   - "请在下一行输入"
 EDITOR-PLEASE-TIME-CUSTOM:
-  - "{0}"
   - "格式(s/m/h 数字) 如's 5'"
   - "请在下一行输入"
