1 - 1.5.0  2022/5/22 - 编辑器选择任务目标

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -187,6 +187,9 @@ EDITOR-TARGET-LIST: "&f{0}  \"&7{1}&f\""
 EDITOR-TARGET-EDIT: "&7编辑"
 EDITOR-TARGET-EDIT-META: "&7&l[ &c✎ &7&l]"
 EDITOR-TARGET-EDIT-HOVER: "&c点击编辑"
+EDITOR-TARGET-ADD: "&7添加任务目标"
+EDITOR-TARGET-ADD-META: "&7&l[ &a+ &7&l]"
+EDITOR-TARGET-ADD-HOVER: "&a点击添加任务目标"
 EDITOR-EDIT-TARGET: "&3&l可视化模式 &7- &f任务目标 \"&7{1}&f(&7{0}&f)&7 {2}&f\""
 EDITOR-EDIT-TARGET-VALUE: "&f{0}: &7{1}"
 EDITOR-EDIT-TARGET-KEY: "&f{0}:"
@@ -261,3 +264,9 @@ EDITOR-PLEASE-MONTH:
 EDITOR-PLEASE-TIME-CUSTOM:
   - "格式(s/m/h 数字) 如's 5'"
   - "请在下一行输入"
+EDITOR-PLEASE-TARGET-ID: "下一行输入任务目标ID"
+EDITOR-SELECT-TARGET: "&3&l可视化模式 &7- &f选择任务目标 \"&7{1}&f(&7{0}&f)&7 {2}&f\""
+EDITOR-SELECT-TARGET-SEL: "&7&l[ &c➤&7&l ]"
+EDITOR-SELECT-TARGET-SEL-HOVER: "&a点击选择"
+EDITOR-SELECT-BREAK-BLOCK: "&f\"&7{0}&f(&7破坏方块&f)\""
+EDITOR-SELECT-TASK: "&f\"&7{0}&f(&7定时器&f)\""
