1 - 1.5.0  2022/5/23 - 编辑器选择任务目标

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -203,7 +203,7 @@ EDITOR-EDIT-FINISH_REWARD: "&3&l可视化模式 &7- &f完成奖励 \"&7{1}&f(&7{
 EDITOR-EDIT-FINISH_REWARD-LIST: "&f\"&7{0}&f\""
 EDITOR-EDIT-FAIL_REWARD: "&3&l可视化模式 &7- &f内部任务失败奖励 \"&7{1}&f(&7{0}&f)&f\""
 EDITOR-EDIT-FAIL_REWARD-LIST: "&f\"&7{0}&f\""
-EDITOR-EDIT-TARGET-NAME: "&7目标选择  &f\"&6{0}&f\""
+EDITOR-EDIT-TARGET-NAME: "&7目标事件  &f\"&6{0}&f\""
 EDITOR-EDIT-TARGET-REWARD: "&7奖励设置  &f\"&6{1}&f\""
 EDITOR-EDIT-TARGET-PERIOD: "&7定时器  &f\"&6{2}&f\""
 EDITOR-EDIT-TARGET-ASYNC: "&7异步线程  &f\"&6{3}&f\""
@@ -268,5 +268,18 @@ EDITOR-PLEASE-TARGET-ID: "下一行输入任务目标ID"
 EDITOR-SELECT-TARGET: "&3&l可视化模式 &7- &f选择任务目标 \"&7{1}&f(&7{0}&f)&7 {2}&f\""
 EDITOR-SELECT-TARGET-SEL: "&7&l[ &c➤&7&l ]"
 EDITOR-SELECT-TARGET-SEL-HOVER: "&a点击选择"
-EDITOR-SELECT-BREAK-BLOCK: "&f\"&7{0}&f(&7破坏方块&f)\""
-EDITOR-SELECT-TASK: "&f\"&7{0}&f(&7定时器&f)\""
+EDITOR-SELECT-BREAK-BLOCK: "&f\"&7{0} &f(&7破坏方块&f)\""
+EDITOR-SELECT-TASK: "&f\"&7{0} &f(&7定时器&f)\""
+EDITOR-SELECT-PLACE-BLOCK: "&f\"&7{0} &f(&7放置方块&f)\""
+EDITOR-SELECT-PASS-COLLECTION-PACKET: "&f\"&7{0} &f(&7交互允许数据包实体&f)\""
+EDITOR-SELECT-ENCHANT-ITEM: "&f\"&7{0} &f(&7附魔物品&f)\""
+EDITOR-SELECT-LEFT-NPC: "&f\"&7{0} &f(&7左键CitizensNPC&f)\""
+EDITOR-SELECT-RIGHT-NPC: "&f\"&7{0} &f(&7右键CitizensNPC&f)\""
+EDITOR-SELECT-PLAYER-CHAT: "&f\"&7{0} &f(&7玩家聊天&f)\""
+EDITOR-SELECT-PLAYER-KILL-ENTITY: "&f\"&7{0} &f(&7玩家击杀实体&f)\""
+EDITOR-SELECT-PLAYER-SEND-COMMAND: "&f\"&7{0} &f(&7玩家发送命令&f)\""
+EDITOR-SELECT-PLAYER-DEATH: "&f\"&7{0} &f(&7玩家死亡&f)\""
+EDITOR-SELECT-PLAYER-JOIN-SERVER: "&f\"&7{0} &f(&7进入服务器&f)\""
+EDITOR-SELECT-PLAYER-QUIT-SERVER: "&f\"&7{0} &f(&7退出服务器&f)\""
+
+EXIST-TARGET-ID: "{0}&r &6{1} &8该内部任务已有相同的任务目标ID"
