--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -204,13 +204,19 @@ EDITOR-EDIT-FINISH_REWARD-LIST: "&f\"&7{0}&f\""
 EDITOR-EDIT-FAIL_REWARD: "&3&l可视化模式 &7- &f内部任务失败奖励 \"&7{1}&f(&7{0}&f)&f\""
 EDITOR-EDIT-FAIL_REWARD-LIST: "&f\"&7{0}&f\""
 EDITOR-EDIT-TARGET-NAME: "&7目标事件  &f\"&6{0}&f\""
-EDITOR-EDIT-TARGET-REWARD: "&7奖励设置  &f\"&6{1}&f\""
-EDITOR-EDIT-TARGET-PERIOD: "&7定时器  &f\"&6{2}&f\""
+EDITOR-EDIT-TARGET-REWARD: "&7奖励ID  &f\"&6{1}&f\""
+EDITOR-EDIT-TARGET-REWARD_BOOLEAN: "&7&l[ &f{0}&7&l ]"
+EDITOR-EDIT-TARGET-PERIOD: "&7定时器滴答  &f\"&6{2}&f\""
 EDITOR-EDIT-TARGET-ASYNC: "&7异步线程  &f\"&6{3}&f\""
 EDITOR-EDIT-TARGET-CONDITION: "&7条件检查"
-EDITOR-EDIT-TARGET-NODE: "&7目标器"
 EDITOR-EDIT-TARGET-META: "&7&l[ &c✎&7&l ]"
 EDITOR-EDIT-TARGET-META-HOVER: "&c点击编辑"
+EDITOR-EDIT-TARGET-BOOLEAN-META-HOVER: "&c点击切换"
+REWARD-BOOLEAN-META-TRUE: "&a可重复领取"
+REWARD-BOOLEAN-META-FALSE: "&c不可重复领取"
+REWARD-BOOLEAN-META-NULL: "&c无奖励"
+ASYNC-BOOLEAN-META-TRUE: "&f异步"
+ASYNC-BOOLEAN-META-FALSE: "&f同步"
 
 EDITOR-BACK: "&7返回"
 EDITOR-BACK-META: "&7&l[ &f◀ &7&l]"
@@ -283,3 +289,9 @@ EDITOR-SELECT-PLAYER-JOIN-SERVER: "&f\"&7{0} &f(&7进入服务器&f)\""
 EDITOR-SELECT-PLAYER-QUIT-SERVER: "&f\"&7{0} &f(&7退出服务器&f)\""
 
 EXIST-TARGET-ID: "{0}&r &6{1} &8该内部任务已有相同的任务目标ID"
+
+EDITOR-SELECT-REWARD: "&3&l可视化模式 &7- &f选择完成奖励 \"&7{1}&f(&7{0}&f)&7 {2}&f\""
+EDITOR-SELECT-REWARD-LIST: "&f\"&7{0}&f\""
+EDITOR-SELECT-REWARD-LIST-ALL: "&f\"&7所有奖励&f\""
+EDITOR-SELECT-REWARD-SEL: "&7&l[ &c➤&7&l ]"
+EDITOR-SELECT-REWARD-SEL-HOVER: "&a点击选择"
