1 - 1.5.0  2022/5/25 - 编辑器目标特有节点编辑

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -137,8 +137,8 @@ EDITOR-SCRIPT-RETURN: "&7状态"
 EDITOR-SCRIPT-RETURN-TRUE: "&7&l[ &a有效 &7&l]"
 EDITOR-SCRIPT-RETURN-ERROR: "&7&l[ &c无效 &7&l]"
 EDITOR-LIST-DEL: "&7删除"
-EDITOR-LIST-META: "&7&l[ &c✘ &7&l]"
-EDITOR-LIST-HOVER: "&c点击删除"
+EDITOR-LIST-DEL-META: "&7&l[ &c✘ &7&l]"
+EDITOR-LIST-DEL-HOVER: "&c点击删除"
 EDITOR-SCRIPT-LIST: "&f\"&7{0}&f\""
 EDITOR-LIST-INNER: "&3&l可视化模式 &7- &f\"&7{0}&f\" &f内部任务列表"
 EDITOR-LIST-INNER-INFO: "&f\"&7{0}&f\" \"&7{1}&f\""
@@ -187,6 +187,9 @@ EDITOR-TARGET-LIST: "&f{0}  \"&7{1}&f\""
 EDITOR-TARGET-EDIT: "&7编辑"
 EDITOR-TARGET-EDIT-META: "&7&l[ &c✎ &7&l]"
 EDITOR-TARGET-EDIT-HOVER: "&c点击编辑"
+EDITOR-TARGET-DEL: "&7删除"
+EDITOR-TARGET-DEL-META: "&7&l[ &c✘ &7&l]"
+EDITOR-TARGET-DEL-HOVER: "&c点击删除"
 EDITOR-TARGET-ADD: "&7添加任务目标"
 EDITOR-TARGET-ADD-META: "&7&l[ &a+ &7&l]"
 EDITOR-TARGET-ADD-HOVER: "&a点击添加任务目标"
@@ -203,7 +206,29 @@ EDITOR-EDIT-FINISH_REWARD: "&3&l可视化模式 &7- &f完成奖励 \"&7{1}&f(&7{
 EDITOR-EDIT-FINISH_REWARD-LIST: "&f\"&7{0}&f\""
 EDITOR-EDIT-FAIL_REWARD: "&3&l可视化模式 &7- &f内部任务失败奖励 \"&7{1}&f(&7{0}&f)&f\""
 EDITOR-EDIT-FAIL_REWARD-LIST: "&f\"&7{0}&f\""
-EDITOR-EDIT-TARGET-NAME: "&7目标事件  &f\"&6{0}&f\""
+
+
+EDITOR-TARGET-NODE: "&7{0}  &f\"&6{1}&f\""
+EDITOR-TARGET-LIST-NODE: "&7{0}"
+EDITOR-TARGET-NODE-AMOUNT: "次数"
+EDITOR-TARGET-NODE-NUMBER: "次数"
+EDITOR-TARGET-NODE-COST: "费用"
+EDITOR-TARGET-NODE-PACKETID: "数据包ID"
+EDITOR-TARGET-NODE-MESSAGE: "消息"
+EDITOR-TARGET-NODE-CONTENT: "内容"
+EDITOR-TARGET-NODE-ENTITY: "匹配实体"
+EDITOR-TARGET-LIST-NODE-BLOCK: "方块材料条目"
+EDITOR-TARGET-LIST-NODE-NEED: "所需条件"
+EDITOR-TARGET-LIST-NODE-CAUSE: "死亡原因条目"
+EDITOR-TARGET-LIST-NODE-ID: "NPC ID"
+EDITOR-TARGET-NODE-META: "&7&l[ &c✎&7&l ]"
+EDITOR-TARGET-NODE-META-HOVER: "&c点击编辑"
+EDITOR-TARGET-NODE-BOOLEAN-HOVER: "&c点击切换"
+EDITOR-TARGET-NODE-PLAYER-STRING: "下一行输入字符"
+EDITOR-TARGET-NODE-PLAYER-INT: "下一行输入整数"
+EDITOR-TARGET-NODE-PLAYER-DOUBLE: "下一行输入小数"
+
+EDITOR-EDIT-TARGET-NAME: "&7条目事件  &f\"&6{0}&f\""
 EDITOR-EDIT-TARGET-REWARD: "&7奖励ID  &f\"&6{1}&f\""
 EDITOR-EDIT-TARGET-REWARD_BOOLEAN: "&7&l[ &f{0}&7&l ]"
 EDITOR-EDIT-TARGET-PERIOD: "&7定时器滴答  &f\"&6{2}&f\""
@@ -295,3 +320,5 @@ EDITOR-SELECT-REWARD-LIST: "&f\"&7{0}&f\""
 EDITOR-SELECT-REWARD-LIST-ALL: "&f\"&7所有奖励&f\""
 EDITOR-SELECT-REWARD-SEL: "&7&l[ &c➤&7&l ]"
 EDITOR-SELECT-REWARD-SEL-HOVER: "&a点击选择"
+
+EDITOR-TARGET-CONDITION-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{1}&f(&7{0}&f)&7 {2}&f\" 目标触发条件"
