1 - 1.5.0  2022/5/26 - 编辑器目标特有节点编辑

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -221,6 +221,8 @@ EDITOR-TARGET-LIST-NODE-BLOCK: "方块材料条目"
 EDITOR-TARGET-LIST-NODE-NEED: "所需条件"
 EDITOR-TARGET-LIST-NODE-CAUSE: "死亡原因条目"
 EDITOR-TARGET-LIST-NODE-ID: "NPC ID"
+EDITOR-TARGET-LIST-UI-NODE: "&3&l可视化模式 &7- &f{3} \"&7{1}&f(&7{0}&f)&7 {2}&f\""
+EDITOR-TARGET-LIST-FOR-NODE: "&f\"&7{0}&f\""
 EDITOR-TARGET-NODE-META: "&7&l[ &c✎&7&l ]"
 EDITOR-TARGET-NODE-META-HOVER: "&c点击编辑"
 EDITOR-TARGET-NODE-BOOLEAN-HOVER: "&c点击切换"
